fix(dialog sample): title misalignment
Closes #2606

--- a/src/app/interactions/dialog/dialog-sample-3/dialog-sample-3.component.scss
+++ b/src/app/interactions/dialog/dialog-sample-3/dialog-sample-3.component.scss
@@ -11,7 +11,6 @@
 
 .title-container{
     display: flex;
-    margin-left: 24px;
 
     igx-icon {
         margin-right: 8px;
